--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-pitch",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "pitch card game",
   "main": "index.js",
   "directories": {
@@ -11,10 +11,14 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
+    "browserify": "^7.0.3",
     "chai": "^1.9.1",
+    "gulp": "^3.8.10",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0"
+    "sinon-chai": "^2.5.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.2.1"
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register -w"
